# rosco

./: Cargo.toml  settings.json
benches/: delay_buffer_benchmark.rs
src/: audio_gen.rs  channel.rs  constants.rs  envelope.rs  envelope_pair.rs  flange.rs  float_utils.rs  frequency_callback.rs  gen_audio.rs  grid_note_sequence.rs  instrument.rs  lfo.rs  main.rs  midi.rs  multi_instrument.rs  note.rs  note_sequence.rs  note_sequence_trait.rs  oscillator.rs  playback_note.rs  playback_note_trait.rs  sample_effect_trait.rs  sequence.rs  sequence_grid.rs  time_note_sequence.rs  track.rs  track_grid.rs  utils.rs
src/audio_gen/: audio_gen.rs  get_sample.rs  mod.rs  oscillator.rs
src/common/: constants.rs  float_utils.rs  mod.rs  pair.rs
src/composition/: comp_utils.rs  computer_punk_001.rs  computer_punk_003.rs  dsl_1.rs  mod.rs
src/compositions/: computer_punk_001.rs  computer_punk_003.rs  dsl_1.rs  mod.rs
src/dsl/: README.md  mod.rs  parser.rs
src/effect/: delay.rs  flanger.rs  lfo.rs  mod.rs
src/envelope/: envelope.rs  envelope_pair.rs  mod.rs
src/instrument/: instrument.rs  mod.rs  multi_instrument.rs
src/meter/: durations.rs  meter.rs  mod.rs
src/midi/: midi.rs  mod.rs
src/note/: constants.rs  mod.rs  note.rs  note_pool.rs  note_trait.rs  playback_note.rs  sampled_note.rs  scales.rs
src/open_sound/: README.md  client.rs  error.rs  handler.rs  integration.rs  message.rs  mod.rs  open_sound_utils.rs  server.rs  types.rs
src/sequence/: fixed_time_note_sequence.rs  grid_note_sequence.rs  mod.rs  (+2 more)
tools/: debug_osc.sh  install_linux.sh  install_mac.sh
(+8 files in other folders)
