[package]
name = "osc"
version = "0.1.0"
edition = "2021"
description = "Music composition tools in Rust"
authors = ["Mark S. Weiss"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float_eq = "1.0.1"
cpal = "0.15.3"
derive_builder = "0.20.0"
nodi = "1.0.0"
once_cell = "1.19.0"