[package]
name = "osc"
version = "0.1.0"
edition = "2021"
description = "Music composition tools in Rust"
authors = ["Mark S. Weiss"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.3"
derive_builder = "0.20.0"
float_eq = "1.0.1"
hound = "3.5.1"
nodi = "1.0.0"
once_cell = "1.19.0"
rand = "0.9.0-alpha.2"
rand_distr = "0.5.0-alpha.3"
circular-queue = "0.2.6"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "delay_buffer_benchmark"
harness = false
